--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <html>
-  
+  <h2>Welcome to the Research Docs page</h2></br>
+  <p>This pages contains few docs for dummy projects i do</p></br>
+  <h5>Software Engineering Project</h5></br>
+  <a href="https://pranithchowdary.github.io/Research-Docs/SE_Files_research.html">SE_Files</a>
+  <a href="https://pranithchowdary.github.io/Research-Doc/intro_to_Cirq.html">Cirq Intro</a>
 </html>
